--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.jpa.show-sql = false
 spring.jpa.properties.hibernate.jdbc.batch_size = 500
 jwt.secret = java
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5433/amazon
+spring.datasource.username=user
+spring.datasource.password=user
+
+spring.jpa.hibernate.ddl-auto=update
