--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,12 @@ cache:
     - $HOME/.m2
 before_install:
   - chmod +x mvnw
+
+services:
+  - postgresql
+
+before_script:
+  - sudo psql -c 'CREATE DATABASE amazon;' -U postgres
+
+script:
+  - mvn clean install
