--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: java
 jdk:
   - openjdk11
+
+dist: trusty
+sudo: required
+
 script:
   - mvn clean install
 cache:
@@ -20,5 +24,3 @@ services:
 before_script:
   - sudo psql -c 'CREATE DATABASE amazon;' -U postgres
 
-script:
-  - mvn clean install
