--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5433/amazon
 spring.datasource.username=user
 spring.datasource.password=user
 
+spring.jpa.database=postgresql
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 spring.jpa.hibernate.ddl-auto=update
